# AegisOS

./: .gitignore  CMakeLists.txt  Makefile  NEXT_STEPS_V55_1.md  README.md  RELEASE.md  RELEASE_CANDIDATE.md  VERSION
boot/: boot_config.h  linker.ld  start.S
dashboard/: Cargo.toml
dashboard/src/: api.rs  auth.rs  cpu_accel.rs  main.rs  state.rs
dashboard/src/routes/: dashboard.rs  devices.rs  firewall.rs  logs.rs  mod.rs  rustmyadmin.rs  updates.rs  vpn.rs
docs/: AEGISOS_OVERVIEW.md  BLOCK_STORAGE_ABSTRACTION.md  FLASHING_RELEASE_IMG.md  FLASH_IMAGE_LAYOUT.md  HARDWARE_NOTES.md  IMAGE_PACKAGING.md  IPC_SERVICE_MESSAGING.md  KNOWN_LIMITATIONS.md  MILESTONE_HISTORY.md  MULTIPROCESS_LAUNCH_PATH.md  PERSISTENT_CONFIG.md  PROCESS_TABLE_CLEANUP.md  QEMU_DISK_BOOT.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md  SYSCALL_EXPANSION.md  V2_RELEASE_NOTES.md  V40_RELEASE_NOTES.md  V41_RELEASE_NOTES.md  V42_RELEASE_NOTES.md  V43_1_PATCH_NOTES.md  V43_2_PATCH_NOTES.md  V43_3_PATCH_NOTES.md  V43_4_PATCH_NOTES.md  V43_RELEASE_NOTES.md  V44_RELEASE_NOTES.md  V45_RELEASE_NOTES.md  V46_RELEASE_NOTES.md  V47_RELEASE_NOTES.md  V48_RELEASE_NOTES.md  boot-flow.md  (+43 more)
security/: Cargo.toml
security/audit/: audit_events.rs  audit_format.md
security/keys/: README.md
security/policy/: firewall_defaults.toml  hardened_baseline.toml  rustmyadmin_policy.toml  service_policy.toml
security/signing/: sign_image.rs  update_manifest.rs  verify_image.rs
security/src/: audit.rs  capabilities.rs  hardening.rs  integrity.rs  keyring.rs  lib.rs  policy_engine.rs  sandbox.rs  secure_boot.rs
(+375 files in other folders)
